k8s/web/web-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: myteststore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: myteststore/web:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - name: web-base-url-conf
              mountPath: /usr/share/nginx/html/assets/
      volumes:
        - name: web-base-url-conf
          configMap:
            name: web-base-url-config
