k8s/web/web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: myteststore
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
