k8s/web/web-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: myteststore
spec:
  ingressClassName: nginx
  rules:
    - host: web.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:  
              service:
                name: web
                port:
                  number: 80
